// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing branching for PatientExamsNeeded() set of preop exams for AtrialFib to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
]
`;

exports[`Testing branching for PatientExamsNeeded() set of preop exams for AtrialFib to match snapshot 2`] = `Array []`;

exports[`Testing branching for PatientExamsNeeded() set of preop exams for Diabetes + Malignancy to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
  "Renal Panel (Creat + Lytes)",
  "Gluc",
  "HbA1C",
  "CBC",
  "CXR",
]
`;

exports[`Testing branching for PatientExamsNeeded() set of preop exams for PVD to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
]
`;

exports[`Testing branching for PatientExamsNeeded() set of preop exams for PVD to match snapshot 2`] = `Array []`;

exports[`Testing branching for PatientExamsNeeded() set of preop exams for PVD to match snapshot 3`] = `
Array [
  "Group and Screen",
  "ECG",
]
`;

exports[`Testing branching for PatientExamsNeeded() set of preop exams for VHD + HeartFail to match snapshot 1`] = `
Array [
  "Group and Screen",
  "ECG",
  "Renal Panel (Creat + Lytes)",
]
`;

exports[`Testing branching for PatientExamsNeeded() set of preop exams for VHD + HeartFail to match snapshot 2`] = `Array []`;

exports[`Testing branching for PatientExamsNeeded() set of preop exams for no conditions to match snapshot 1`] = `
Array [
  "Group and Screen",
]
`;

exports[`Testing branching for PatientExamsNeeded() set of preop exams for no conditions to match snapshot 2`] = `Array []`;
